[gd_scene load_steps=6 format=3 uid="uid://b3lcynkdn7ogk"]

[ext_resource type="Script" uid="uid://dhuf6101u2sbj" path="res://Interactables/BookHelper/book.gd" id="1_gpkfv"]
[ext_resource type="Texture2D" uid="uid://bf1xp37ingl28" path="res://Assets/BookHelper/Book.png" id="2_5j1j7"]
[ext_resource type="Texture2D" uid="uid://cxy508fg3rda6" path="res://Assets/BookHelper/Previous.png" id="3_5j1j7"]
[ext_resource type="Texture2D" uid="uid://ccu54maty260q" path="res://Assets/BookHelper/Next.png" id="4_om8wl"]
[ext_resource type="AudioStream" uid="uid://dm76kcj1pn7h2" path="res://Assets/Sounds/PageTurn.mp3" id="5_om8wl"]

[node name="BookHelper" type="CanvasLayer"]
layer = 15
script = ExtResource("1_gpkfv")

[node name="Book" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -256.0
offset_right = 384.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="DragArea" type="Control" parent="Book"]
anchors_preset = 0
offset_left = 319.0
offset_top = 94.0
offset_right = 436.0
offset_bottom = 132.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="Book"]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 1024.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5j1j7")

[node name="Title" type="Label" parent="Book"]
layout_mode = 0
offset_left = 100.0
offset_top = 94.0
offset_right = 322.0
offset_bottom = 125.0

[node name="Content1" type="RichTextLabel" parent="Book"]
layout_mode = 0
offset_left = 73.0
offset_top = 125.0
offset_right = 353.0
offset_bottom = 396.0
bbcode_enabled = true

[node name="Content2" type="RichTextLabel" parent="Book"]
layout_mode = 0
offset_left = 398.0
offset_top = 125.0
offset_right = 678.0
offset_bottom = 396.0
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Book"]
layout_mode = 0
offset_left = 48.0
offset_top = 346.0
offset_right = 707.0
offset_bottom = 418.0

[node name="Previous" type="Button" parent="Book/HBoxContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource("3_5j1j7")
flat = true

[node name="Next" type="Button" parent="Book/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("4_om8wl")
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Book"]

[node name="TurnPage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_om8wl")

[connection signal="pressed" from="Book/HBoxContainer/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Book/HBoxContainer/Next" to="." method="_on_next_pressed"]
